0.20 - ??/09/2007

	- add MUC support
	- add status window to show contact's presence in a window, setting
	"xmpp_status_window" to enable it
	- add raw window, setting "xmpp_raw_window" to enable it
	- add command /ME
	- add commands /XMPPCONNECT and /XMPPSERVER to connect to a jabber
	server
	- add command /VER request the software version
	- add command /WHOIS to request the vCard
	- send the specified message when disconnecting (/quit <message>)
	- full completion support for user name (without space)
	- complete group name in the command /ROSTER GROUP
	- add statusbar "xmpp_composing" to show composing events
	- send message composing events, set "xmpp_send_composing" to OFF
	to disable it
	- you don't need to reconnect anymore when you change the setting
	"xmpp_priority", it take effect immediately
	- set the JID as nick in irssi by default and add setting
	"xmpp_set_nick_as_username" to use the left part of a JID as nick
	- display disconnection error messages correctly
	- don't create a new query window if there's already one
	- lots of bug fixes and big code cleanup

0.13 - 12/08/2007

	- the roster can now manage contacts
	- the roster can deal with contact subscriptions
	- add setting "roster_add_send_subscribe" to send a subscribe request
	when adding a contact to the roster
	- add setting "xmpp_priority" to set the priority of your connection,
	must reconnect to take effect
	- bulletproof username, server, resource and jid, when using /server
	or /connect (fit to the "Connection" part of the README)
	- drop "lorder|tsort" in Makefiles, may compile on every linux
	distributions

0.12 - 09/08/2007

	- add SSL support
	- add new connection status messages
	- full JIDs and resources completion
	- open queries with the highest resource if not specified
	- show unsuscribed users in the roster
	- add setting "roster_show_offline_unsuscribed" to show/hide
	unsuscribed users when they are offline if "roster_show_offline" is OFF