@@ -30,6 +30,7 @@
 #include "xmpp-channels.h"
 #include "xmpp-commands.h"
 #include "xmpp-nicklist.h"
+#include "xmpp-ping.h"
 #include "xmpp-protocol.h"
 #include "xmpp-queries.h"
 #include "xmpp-rosters.h"
@@ -95,6 +96,7 @@ xmpp_core_init(void)
 	xmpp_channels_init();
 	xmpp_commands_init();
 	xmpp_nicklist_init();
+	xmpp_ping_init();
 	xmpp_protocol_init();
 	xmpp_rosters_init();
 	xmpp_servers_init();
@@ -109,6 +111,7 @@ xmpp_core_deinit(void)
 	xmpp_channels_deinit();
 	xmpp_commands_deinit();
 	xmpp_nicklist_deinit();
+	xmpp_ping_deinit();
 	xmpp_protocol_deinit();
 	xmpp_rosters_deinit();
 	xmpp_servers_deinit();
